# mlx-video

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: DIAGNOSTICS.md  PORTING-GUIDE.md  wan22-implementation-notes.md
mlx_video/: __init__.py  convert.py  convert_wan.py  generate.py  generate_av.py  generate_dev.py  generate_wan.py  postprocess.py  quantization.py  samplers.py  utils.py
mlx_video/components/: __init__.py
mlx_video/conditioning/: latent.py
mlx_video/lora/: __init__.py  apply.py  loader.py  types.py
mlx_video/models/: __init__.py
mlx_video/models/ltx/: __init__.py  attention.py  config.py  convert.py  ltx.py  rope.py  text_encoder.py  text_projection.py  transformer.py  (+1 more)
patches/: mlx-mxfp8-qqmm.patch
scripts/: install_mlx_mxfp8_qqmm.sh
scripts/video/: compare_videos.py  video_quality.py
tests/: test_generate_dev.py  test_ltx2_attention.py  test_ltx2_conditioning.py  test_ltx2_distilled_compile.py  test_ltx2_distilled_lora.py  test_ltx2_i2v_aspect_ratio.py  test_ltx2_i2v_audio.py  test_ltx2_memory_profile.py  test_ltx2_model_loading.py  test_ltx2_transformer_quantization.py  test_ltx2_upsampler_convert.py  test_ltx2_video_encoder_config.py  test_rope.py  test_vae_streaming.py  test_wan.py  test_wan_attention.py  test_wan_config.py  test_wan_convert.py  test_wan_generate.py  test_wan_i2v.py  test_wan_lora.py  test_wan_model.py  test_wan_quantization.py  test_wan_rope_freqs.py  test_wan_scheduler.py  test_wan_t5.py  test_wan_tiling.py  test_wan_transformer.py  test_wan_vae.py  wan_test_helpers.py
(+93 files in other folders)
